--- a/View/Pages/DeleteStudentPage.xaml
+++ b/View/Pages/DeleteStudentPage.xaml
@@ -20,7 +20,7 @@
         <TextBlock Text="Название группы" FontSize="30"/>
         <ComboBox Name="GroupCmb" Height="50" Width="200" SelectionChanged="GroupCmb_SelectionChanged"/>
         <Button Name="SearchBtn" Content="Поиск" Height="50" Width="200" HorizontalAlignment="Right" FontSize="20" Click="SearchBtn_Click"/>
-        <ListView Name="StudentLv" Grid.Row="2" SelectionChanged="StudentLv_SelectionChanged">
+        <ListView Name="StudentLv" Grid.Row="2" >
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="ФИО"
